--- a/examples/main_example/Cargo.toml
+++ b/examples/main_example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "main_example"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2018"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 publish = false
@@ -10,9 +10,11 @@ publish = false
 resolver = "2"
 
 [dependencies]
-egui_demo_lib = "0.15"
-egui_wgpu_backend = "0.14"
 # with fltk-bundled features work on windows, linux and mac x64 only
 # egui-fltk-frontend = { path = "../../../egui-fltk-frontend", features = ["fltk-bundled"] }
-egui-fltk-frontend = "0.2"
+# On x11
+# egui-fltk-frontend = { path = "../../../egui-fltk-frontend", version = "0.3", default-features=false, features = ["clipboard-x11"] }
+egui-fltk-frontend = "0.3"
+egui_demo_lib = "0.15"
+egui_wgpu_backend = "0.14"
 pollster = "0.2"
