--- a/examples/main_example/Cargo.toml
+++ b/examples/main_example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "main_example"
-version = "0.3.1"
+version = "0.3.2"
 edition = "2018"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 publish = false
@@ -10,10 +10,8 @@ publish = false
 resolver = "2"
 
 [dependencies]
-# with fltk-bundled features work on windows, linux and mac x64 only
-# egui-fltk-frontend = { path = "../../../egui-fltk-frontend", features = ["fltk-bundled"] }
-# On x11
-# egui-fltk-frontend = { version = "0.3", default-features=false, features = ["clipboard-x11"] }
+# With fltk-bundled features work on windows, linux and mac x64 only
+# egui-fltk-frontend = { version = "0.3", features = ["fltk-bundled"] }
 egui-fltk-frontend = "0.3"
 egui_demo_lib = "0.15"
 egui_wgpu_backend = "0.14"
