--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2018"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 description = "FLTK frontend for Egui WGPU backend"
@@ -15,7 +15,7 @@ resolver = "2"
 [dependencies]
 egui = "0.15"
 egui_wgpu_backend = "0.14"
-fltk = { version = "1.2", features = ["raw-window-handle"] }
+fltk = { version = "1.2", features = ["raw-window-handle", "fltk-bundled"] }
 
 [target."cfg(windows)".dependencies.copypasta]
 version = "0.7"
@@ -30,8 +30,21 @@ version = "0.7"
 optional = true
 default-features = false
 
+[dependencies.tiny-skia]
+version = "0.6"
+optional = true
+
+[dependencies.usvg]
+version = "0.19"
+optional = true
+
+[dependencies.resvg]
+version = "0.19"
+optional = true
+
 [features]
 default = ["clipboard-x11"]
+svg = ["resvg", "usvg", "tiny-skia"]
 clipboard = ["copypasta"]
 clipboard-x11 = ["clipboard", "copypasta/x11"]
 clipboard-wayland = ["clipboard", "copypasta/wayland"]
