--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,14 @@ clipboard = ["copypasta"]
 clipboard-x11 = ["clipboard", "copypasta/x11"]
 clipboard-wayland = ["clipboard", "copypasta/wayland"]
 fltk-bundled = ["fltk/fltk-bundled"]
+fltk-shared = ["fltk/fltk-shared"]
+fltk-no-pango = ["fltk/no-pango"]
+fltk-no-gdiplus = ["fltk/no-gdiplus"]
+fltk-single-threaded = ["fltk/single-threaded"]
+system-fltk = ["fltk/system-fltk"]
+system-libjpeg = ["fltk/system-libjpeg"]
+system-libpng = ["fltk/system-libpng"]
+system-zlib = ["fltk/system-zlib"]
 
 [dev-dependencies]
 egui_demo_lib = "0.15"
