--- a/examples/image_network/Cargo.toml
+++ b/examples/image_network/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "main_example"
+name = "image_network"
 version = "0.3.4"
 edition = "2018"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -13,6 +13,9 @@ resolver = "2"
 # With fltk-bundled (faster build time) features work on windows, linux and mac x64 only (requires curl and tar)
 # egui-fltk-frontend = { version = "0.3", features = ["fltk-bundled"] }
 egui-fltk-frontend = "0.3"
-egui_demo_lib = "0.15"
 egui_wgpu_backend = "0.14"
+asynchron = "0.9"
 pollster = "0.2"
+reqwest = "0.11"
+tokio = { version = "1", features = ["rt-multi-thread"] }
+
