--- a/examples/image_network_ureq/Cargo.toml
+++ b/examples/image_network_ureq/Cargo.toml
@@ -14,7 +14,7 @@ resolver = "2"
 # egui-fltk-frontend = { version = "0.3", features = ["fltk-bundled"] }
 egui-fltk-frontend = "0.3"
 egui_wgpu_backend = "0.14"
-asynchron = "0.9"
 pollster = "0.2"
+flowync = "0.2"
 ureq = "2"
 
