--- a/examples/image_network/Cargo.toml
+++ b/examples/image_network/Cargo.toml
@@ -14,8 +14,7 @@ resolver = "2"
 # egui-fltk-frontend = { version = "0.3", features = ["fltk-bundled"] }
 egui-fltk-frontend = "0.3"
 egui_wgpu_backend = "0.14"
-asynchron = "0.9"
+flowync = "1"
 pollster = "0.2"
 reqwest = "0.11"
 tokio = { version = "1", features = ["rt-multi-thread"] }
-
