--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.3.5"
+version = "0.15.0"
 edition = "2018"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 description = "FLTK frontend for Egui WGPU backend"
@@ -15,8 +15,9 @@ exclude = ["screenshot/"]
 
 [dependencies]
 egui = "0.15"
-egui_wgpu_backend = "0.14"
-fltk = { version = "1.2", features = ["raw-window-handle"] }
+egui_wgpu_backend = "0.15"
+fltk = { version = "1.2", features = ["raw-window-handle", "fltk-bundled"] }
+raw-window-handle = "0.4"
 
 [target."cfg(windows)".dependencies.copypasta]
 version = "0.7"
