--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.15.1"
-edition = "2018"
+version = "0.17.0"
+edition = "2021"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 description = "FLTK frontend for Egui WGPU backend"
 documentation = "https://docs.rs/egui-fltk-frontend"
@@ -14,42 +14,25 @@ exclude = ["screenshot/"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fltk = "1.2"
-egui = "0.15"
-egui_wgpu_backend = "0.15"
-raw-window-handle = "0.4"
+fltk = { version = "1.3", features = ["raw-window-handle"] }
+epi = "0.17"
+egui_extras = "0.17"
+egui_wgpu_backend = "0.17"
 
 [target."cfg(windows)".dependencies.copypasta]
 version = "0.7"
-optional = true
 
 [target."cfg(all(unix, not(any(target_os=\"linux\", target_os=\"freebsd\"))))".dependencies.copypasta]
 version = "0.7"
-optional = true
 
 [target."cfg(all(unix, any(target_os=\"linux\", target_os=\"freebsd\")))".dependencies.copypasta]
 version = "0.7"
-optional = true
 default-features = false
 
-[dependencies.tiny-skia]
-version = "0.6"
-optional = true
-
-[dependencies.usvg]
-version = "0.19"
-optional = true
-
-[dependencies.resvg]
-version = "0.19"
-optional = true
-
 [features]
-default = ["clipboard-x11"]
-svg = ["resvg", "usvg", "tiny-skia"]
-clipboard = ["copypasta"]
-clipboard-x11 = ["clipboard", "copypasta/x11"]
-clipboard-wayland = ["clipboard", "copypasta/wayland"]
+default = ["x11"]
+x11 = ["copypasta/x11"]
+wayland = ["copypasta/wayland", "fltk/use-wayland"]
 fltk-bundled = ["fltk/fltk-bundled"]
 fltk-shared = ["fltk/fltk-shared"]
 fltk-no-pango = ["fltk/no-pango"]
@@ -61,5 +44,5 @@ system-libpng = ["fltk/system-libpng"]
 system-zlib = ["fltk/system-zlib"]
 
 [dev-dependencies]
-egui_demo_lib = "0.15"
+egui_demo_lib = "0.17"
 pollster = "0.2"
