--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.17.0"
+version = "0.17.1"
 edition = "2021"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 description = "FLTK frontend for Egui WGPU backend"
@@ -15,7 +15,7 @@ exclude = ["screenshot/"]
 
 [dependencies]
 fltk = { version = "1.3", features = ["raw-window-handle"] }
-epi = "0.17"
+egui = "0.17"
 egui_extras = "0.17"
 egui_wgpu_backend = "0.17"
 
@@ -32,7 +32,7 @@ default-features = false
 [features]
 default = ["x11"]
 x11 = ["copypasta/x11"]
-wayland = ["copypasta/wayland", "fltk/use-wayland"]
+wayland = ["x11", "copypasta/wayland", "fltk/use-wayland"]
 fltk-bundled = ["fltk/fltk-bundled"]
 fltk-shared = ["fltk/fltk-shared"]
 fltk-no-pango = ["fltk/no-pango"]
