--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.17.1"
+version = "0.17.2"
 edition = "2021"
+rust-version = "1.59.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 description = "FLTK frontend for Egui WGPU backend"
 documentation = "https://docs.rs/egui-fltk-frontend"
@@ -16,7 +17,7 @@ exclude = ["screenshot/"]
 [dependencies]
 fltk = { version = "1.3", features = ["raw-window-handle"] }
 egui = "0.17"
-egui_extras = "0.17"
+usync = "0.1"
 egui_wgpu_backend = "0.17"
 
 [target."cfg(windows)".dependencies.copypasta]
