--- a/examples/main_example/Cargo.toml
+++ b/examples/main_example/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "main_example"
-version = "0.17.0"
+version = "0.17.2"
 edition = "2021"
+rust-version = "1.59.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
