--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.17.9"
+version = "0.17.91"
 edition = "2021"
 rust-version = "1.56.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -15,6 +15,8 @@ exclude = ["screenshot/"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# internal use case
+# fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled"] }
 fltk = { version = "1.3", features = ["raw-window-handle"] }
 egui = "0.17"
 egui_wgpu_backend = "0.17"
