--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.17.10"
+version = "0.18.0"
 edition = "2021"
 rust-version = "1.60.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -18,8 +18,9 @@ exclude = ["screenshot/"]
 # internal use case
 # fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled"] }
 fltk = { version = "1.3", features = ["raw-window-handle"] }
-egui = "0.17"
-egui_wgpu_backend = "0.17"
+egui = "0.18"
+egui-wgpu = "0.18"
+pollster = "0.2"
 
 [target."cfg(windows)".dependencies.copypasta]
 version = "0.7"
@@ -46,5 +47,4 @@ system-libpng = ["fltk/system-libpng"]
 system-zlib = ["fltk/system-zlib"]
 
 [dev-dependencies]
-egui_demo_lib = "0.17"
-pollster = "0.2"
+egui_demo_lib = "0.18"
