--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.18.1"
+version = "0.18.2"
 edition = "2021"
 rust-version = "1.60.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -17,19 +17,19 @@ exclude = ["screenshot/"]
 [dependencies]
 # internal use case
 # fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled"] }
-fltk = { version = "1.3", features = ["raw-window-handle"] }
+fltk = { version = "1.3", features = ["raw-window-handle", "enable-glwindow"] }
 egui = "0.18"
 egui-wgpu = "0.18"
 pollster = "0.2"
 
 [target."cfg(windows)".dependencies.copypasta]
-version = "0.7"
+version = "0.8"
 
 [target."cfg(all(unix, not(any(target_os=\"linux\", target_os=\"freebsd\"))))".dependencies.copypasta]
-version = "0.7"
+version = "0.8"
 
 [target."cfg(all(unix, any(target_os=\"linux\", target_os=\"freebsd\")))".dependencies.copypasta]
-version = "0.7"
+version = "0.8"
 default-features = false
 
 [features]
