--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.18.3"
+version = "0.18.4"
 edition = "2021"
 rust-version = "1.60.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -36,6 +36,7 @@ default-features = false
 default = ["x11"]
 x11 = ["copypasta/x11"]
 wayland = ["x11", "copypasta/wayland", "fltk/use-wayland"]
+fltk-enable-glwindow = ["fltk/enable-glwindow"]
 fltk-bundled = ["fltk/fltk-bundled"]
 fltk-shared = ["fltk/fltk-shared"]
 fltk-no-pango = ["fltk/no-pango"]
