--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.19.0"
+version = "0.19.1"
 edition = "2021"
 rust-version = "1.60.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -20,8 +20,8 @@ egui = { version = "0.18", features = [
     "bytemuck",
 ] }
 # internal use case
-# fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled", "enable-glwindow"] }
-fltk = { version = "1.3", features = ["raw-window-handle"] }
+fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled", "enable-glwindow"] }
+# fltk = { version = "1.3", features = ["raw-window-handle"] }
 pollster = "0.2"
 wgpu = { version = "0.13" }
 
