--- a/examples/main_example/Cargo.toml
+++ b/examples/main_example/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "main_example"
-version = "0.19"
+version = "0.19.1"
 edition = "2021"
 rust-version = "1.60"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -11,7 +11,9 @@ publish = false
 resolver = "2"
 
 [dependencies]
-# With fltk-bundled (faster build time) features work on windows, linux and mac x64 only (requires curl and tar)
-# egui-fltk-frontend = { version = "0.19", features = ["fltk-bundled"] }
-egui-fltk-frontend = "0.19"
+# internal use case
+# egui-fltk-frontend = { version = "0.19", path = "../../../egui-fltk-frontend",  features = ["fltk-enable-glwindow", "fltk-bundled"] }
+
+# enable the "fltk-enable-glwindow" features for more windowing compatibility.
+egui-fltk-frontend = { version = "0.19",  features = ["fltk-enable-glwindow"] }
 egui_demo_lib = "0.18"
