--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,9 +19,9 @@ bytemuck = "1"
 egui = { version = "0.18", features = [
     "bytemuck",
 ] }
-# internal use case
-fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled", "enable-glwindow"] }
-# fltk = { version = "1.3", features = ["raw-window-handle"] }
+# internal use case only
+# fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled", "enable-glwindow"] }
+fltk = { version = "1.3", features = ["raw-window-handle"] }
 pollster = "0.2"
 wgpu = { version = "0.13" }
 
