--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "egui-fltk-frontend"
-version = "0.19.6"
+version = "0.19.7"
 edition = "2021"
 rust-version = "1.60.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
@@ -16,14 +16,13 @@ exclude = ["screenshot/"]
 
 [dependencies]
 bytemuck = "1"
-egui = { version = "0.18", features = [
-    "bytemuck",
-] }
+egui = { version = "0.18", features = ["bytemuck"] }
 # internal use case only
 # fltk = { version = "1.3", features = ["raw-window-handle", "fltk-bundled", "enable-glwindow"] }
 fltk = { version = "1.3", features = ["raw-window-handle"] }
 pollster = "0.2"
 wgpu = { version = "0.13" }
+fxhash = "0.2"
 
 [target."cfg(windows)".dependencies.copypasta]
 version = "0.8"
@@ -37,6 +36,7 @@ default-features = false
 
 [features]
 default = ["x11"]
+debug = []
 x11 = ["copypasta/x11"]
 wayland = ["x11", "copypasta/wayland", "fltk/use-wayland"]
 fltk-enable-glwindow = ["fltk/enable-glwindow"]
