--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ repository = "https://github.com/Ar37-rs/egui-fltk-frontend"
 resolver = "2"
 exclude = ["screenshot/"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-build = "build.rs"
+# build = "build.rs"
 
 [dependencies]
 bytemuck = "1"
